--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,3 +2,8 @@
   This is what I'm all about.
   <a href="" (click)="sendMeHome()"><strong>Take me back</strong></a>
 </p>
+<ul>
+  <li *ngFor="let goal of goals">
+    {{goal}}
+  </li>
+</ul>
